# xmobar-knu

./: LICENSE  default.nix  xmobar-knu.cabal  xmobar-knu.nix  xmobar.cabal  xmobar.nix
app/: Main.hs
