cabal-version:      2.4
name:               xmobar-knu
version:            0.1.0.0

license:            MIT
author:             knupfer
maintainer:         fknupfer@gmail.com

executable xmobar
    main-is:          Main.hs
    build-depends:    base ^>=4.15.1.0
                    , xmobar
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded
